fdo#35661: fix sw.SwXViewSettings::com::sun::star::text::ViewSettings